fix header padding bottom gap-y-2

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -715,7 +715,7 @@
     }
   }
   .navbar {
-    @apply relative flex w-full flex-wrap items-center justify-between gap-y-2;
+    @apply relative flex w-full flex-wrap items-center justify-between;
   }
   .navbar-brand img {
     height: auto !important;
